--- a/index.html
+++ b/index.html
@@ -1,105 +1,146 @@
-<script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
-        function filledCell(cell) {
-          return cell !== '' && cell != null;
-        }
-        function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
-            try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
-                var firstSheetName = workbook.SheetNames[0];
-                var worksheet = workbook.Sheets[firstSheetName];
-
-                // Convert sheet to JSON to filter blank rows
-                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                // Filter out blank rows (rows where all cells are empty, null, or undefined)
-                var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
-                var headerRowIndex = filteredData.findIndex((row, index) =>
-                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
-                );
-                // Fallback
-                if (headerRowIndex === -1 || headerRowIndex > 25) {
-                  headerRowIndex = 0;
-                }
-
-                // Convert filtered JSON back to CSV
-                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
-                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
-                return csv;
-            } catch (e) {
-                console.error(e);
-                return "";
-            }
-        }
-        return gk_fileData[filename] || "";
-        }
-        </script><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Информационно-аналитическая система</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
 <body class="bg-gray-100 font-sans">
-    <!-- Навигация -->
-    <nav class="bg-blue-600 text-white p-4">
-        <div class="container mx-auto flex justify-between">
-            <h1 class="text-xl font-bold">Система мониторинга</h1>
-            <div>
-                <a href="index.html" class="px-4 hover:underline">Главная</a>
-                <a href="about.html" class="px-4 hover:underline">О проекте</a>
-                <a href="downloads.html" class="px-4 hover:underline">Скачать</a>
-            </div>
-        </div>
-    </nav>
-
-    <!-- Главная страница -->
-    <div class="container mx-auto p-6">
-        <h1 class="text-3xl font-bold text-center mb-6">Информационно-аналитическая система “Система мониторинга и анализа общественного мнения в социальных сетях”</h1>
-
-        <!-- Фотографии участников -->
-        <div class="flex justify-center gap-8 mb-8">
-            <div class="text-center">
-                <div class="w-40 aspect-[3/4] mx-auto overflow-hidden rounded-lg">
-                    <img src="image/borovikov.jpg" alt="Участник 1" class="w-full h-full object-cover">
+    <!-- Контейнер для формы авторизации -->
+    <div id="authContainer" class="container mx-auto p-6 flex justify-center items-center h-screen">
+        <div class="bg-white p-6 rounded-lg shadow-md w-full max-w-md">
+            <h2 class="text-2xl font-semibold text-center mb-4">Авторизация</h2>
+            <form id="authForm">
+                <div class="mb-4">
+                    <label for="login" class="block text-gray-700 mb-2">Логин</label>
+                    <input type="text" id="login" class="w-full p-2 border border-gray-300 rounded-lg" required>
                 </div>
-                <p class="mt-2">Боровиков Даниил Александрович</p>
-            </div>
-            <div class="text-center">
-                <div class="w-40 aspect-[3/4] mx-auto overflow-hidden rounded-lg">
-                    <img src="image/isaev.jpg" alt="Участник 2" class="w-full h-full object-cover">
+                <div class="mb-4">
+                    <label for="password" class="block text-gray-700 mb-2">Пароль</label>
+                    <input type="password" id="password" class="w-full p-2 border border-gray-300 rounded-lg" required>
                 </div>
-                <p class="mt-2">Исаев Булат Абубакарович</p>
-            </div>
-        </div>
-
-
-        <!-- Описание проекта -->
-        <div class="bg-white p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-semibold mb-4">Обзор проекта</h2>
-            <p class="mb-4">Проект представляет собой информационно-аналитическую систему, предназначенную для мониторинга и анализа общественного мнения в социальных сетях. Система собирает данные из различных платформ, анализирует их и предоставляет пользователю структурированную информацию для принятия решений.</p>
-
-            <h2 class="text-2xl font-semibold mb-4">Основные функции системы</h2>
-            <ul class="list-disc pl-6 mb-4">
-                <li>Сбор данных из социальных сетей в реальном времени.</li>
-                <li>Анализ текстовых сообщений с использованием методов обработки естественного языка.</li>
-                <li>Визуализация данных в виде графиков и диаграмм.</li>
-                <li>Фильтрация и категоризация информации по ключевым словам и темам.</li>
-            </ul>
-
-            <h2 class="text-2xl font-semibold mb-4">Преимущества нашей системы</h2>
-            <ul class="list-disc pl-6">
-                <li>Высокая точность анализа данных.</li>
-                <li>Интуитивно понятный интерфейс.</li>
-                <li>Гибкость настройки под конкретные задачи.</li>
-                <li>Поддержка множества социальных платформ.</li>
-            </ul>
+                <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded-lg hover:bg-blue-700">Войти</button>
+            </form>
         </div>
     </div>
+
+    <!-- Контейнер для основного контента -->
+    <div id="mainContainer" class="hidden">
+        <!-- Навигация -->
+        <nav class="bg-blue-600 text-white p-4">
+            <div class="container mx-auto flex justify-between">
+                <h1 class="text-xl font-bold">Система мониторинга</h1>
+                <div>
+                    <a href="index.html" class="px-4 hover:underline">Главная</a>
+                    <a href="about.html" class="px-4 hover:underline">О проекте</a>
+                    <a href="downloads.html" class="px-4 hover:underline">Скачать</a>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Главная страница -->
+        <div class="container mx-auto p-6">
+            <h1 class="text-3xl font-bold text-center mb-6">Информационно-аналитическая система “Система мониторинга и анализа общественного мнения в социальных сетях”</h1>
+
+            <!-- Фотографии участников -->
+            <div class="flex justify-center gap-8 mb-8">
+                <div class="text-center">
+                    <div class="w-40 aspect-[3/4] mx-auto overflow-hidden rounded-lg">
+                        <img src="image/borovikov.jpg" alt="Участник 1" class="w-full h-full object-cover">
+                    </div>
+                    <p class="mt-2">Боровиков Даниил Александрович</p>
+                </div>
+                <div class="text-center">
+                    <div class="w-40 aspect-[3/4] mx-auto overflow-hidden rounded-lg">
+                        <img src="image/isaev.jpg" alt="Участник 2" class="w-full h-full object-cover">
+                    </div>
+                    <p class="mt-2">Исаев Булат Абубакарович</p>
+                </div>
+            </div>
+
+            <!-- Описание проекта -->
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <h2 class="text-2xl font-semibold mb-4">Обзор проекта</h2>
+                <p class="mb-4">Проект представляет собой информационно-аналитическую систему, предназначенную для мониторинга и анализа общественного мнения в социальных сетях. Система собирает данные из различных платформ, анализирует их и предоставляет пользователю структурированную информацию для принятия решений.</p>
+
+                <h2 class="text-2xl font-semibold mb-4">Основные функции системы</h2>
+                <ul class="list-disc pl-6 mb-4">
+                    <li>Сбор данных из социальных сетей в реальном времени.</li>
+                    <li>Анализ текстовых сообщений с использованием методов обработки естественного языка.</li>
+                    <li>Визуализация данных в виде графиков и диаграмм.</li>
+                    <li>Фильтрация и категоризация информации по ключевым словам и темам.</li>
+                </ul>
+
+                <h2 class="text-2xl font-semibold mb-4">Преимущества нашей системы</h2>
+                <ul class="list-disc pl-6">
+                    <li>Высокая точность анализа данных.</li>
+                    <li>Интуитивно понятный интерфейс.</li>
+                    <li>Гибкость настройки под конкретные задачи.</li>
+                    <li>Поддержка множества социальных платформ.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+            return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+            if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+                try {
+                    var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                    var firstSheetName = workbook.SheetNames[0];
+                    var worksheet = workbook.Sheets[firstSheetName];
+
+                    // Convert sheet to JSON to filter blank rows
+                    var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                    // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                    var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                    // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                    var headerRowIndex = filteredData.findIndex((row, index) =>
+                        row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                    );
+                    // Fallback
+                    if (headerRowIndex === -1 || headerRowIndex > 25) {
+                        headerRowIndex = 0;
+                    }
+
+                    // Convert filtered JSON back to CSV
+                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                    csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                    return csv;
+                } catch (e) {
+                    console.error(e);
+                    return "";
+                }
+            }
+            return gk_fileData[filename] || "";
+        }
+
+        // Проверка состояния авторизации при загрузке страницы
+        document.addEventListener('DOMContentLoaded', () => {
+            const isAuthenticated = localStorage.getItem('isAuthenticated');
+            if (isAuthenticated === 'true') {
+                document.getElementById('authContainer').classList.add('hidden');
+                document.getElementById('mainContainer').classList.remove('hidden');
+            }
+        });
+
+        // Обработка отправки формы авторизации
+        document.getElementById('authForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+            // Разрешаем любые логин и пароль
+            localStorage.setItem('isAuthenticated', 'true');
+            document.getElementById('authContainer').classList.add('hidden');
+            document.getElementById('mainContainer').classList.remove('hidden');
+        });
+    </script>
 </body>
 </html>
