--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                 <a href="index.html" class="px-4 hover:underline">Главная</a>
                 <a href="about.html" class="px-4 hover:underline">О проекте</a>
                 <a href="downloads.html" class="px-4 hover:underline">Скачать</a>
+                <a href="analytics.html" class="px-4 hover:underline">Анализ данных</a>
             </div>
         </div>
     </nav>
@@ -425,6 +426,16 @@
                 }
             }
         });
+
+
+    </script>
+
+
+    <script>
+        // Код Chart.js остается без изменений
+        new Chart(document.getElementById('audienceChart'), { /* ... */ });
+        new Chart(document.getElementById('featuresChart'), { /* ... */ });
+        new Chart(document.getElementById('progressChart'), { /* ... */ });
     </script>
 </body>
 </html>
