--- a/downloads.html
+++ b/downloads.html
@@ -15,6 +15,7 @@
                 <a href="index.html" class="px-4 hover:underline">Главная</a>
                 <a href="about.html" class="px-4 hover:underline">О проекте</a>
                 <a href="downloads.html" class="px-4 hover:underline">Скачать</a>
+                <a href="analytics.html" class="px-4 hover:underline">Анализ данных</a>
             </div>
         </div>
     </nav>
