--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
                     <label for="password" class="block text-gray-700 mb-2">Пароль</label>
                     <input type="password" id="password" class="w-full p-2 border border-gray-300 rounded-lg" required>
                 </div>
+                <div class="mb-4">
+                    <label class="block text-gray-700 mb-2">Пол</label>
+                    <div class="flex gap-4">
+                        <label><input type="radio" name="gender" value="male" required> Мужской</label>
+                        <label><input type="radio" name="gender" value="female"> Женский</label>
+                    </div>
+                </div>
                 <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded-lg hover:bg-blue-700">Войти</button>
             </form>
         </div>
@@ -36,6 +43,7 @@
                     <a href="index.html" class="px-4 hover:underline">Главная</a>
                     <a href="about.html" class="px-4 hover:underline">О проекте</a>
                     <a href="downloads.html" class="px-4 hover:underline">Скачать</a>
+                    <a href="analytics.html" class="px-4 hover:underline">Анализ данных</a>
                 </div>
             </div>
         </nav>
@@ -97,23 +105,15 @@
                     var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
                     var firstSheetName = workbook.SheetNames[0];
                     var worksheet = workbook.Sheets[firstSheetName];
-
-                    // Convert sheet to JSON to filter blank rows
                     var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
-                    // Filter out blank rows (rows where all cells are empty, null, or undefined)
                     var filteredData = jsonData.filter(row => row.some(filledCell));
-
-                    // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
                     var headerRowIndex = filteredData.findIndex((row, index) =>
                         row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
                     );
-                    // Fallback
                     if (headerRowIndex === -1 || headerRowIndex > 25) {
                         headerRowIndex = 0;
                     }
-
-                    // Convert filtered JSON back to CSV
-                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                    var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex));
                     csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
                     return csv;
                 } catch (e) {
@@ -124,7 +124,7 @@
             return gk_fileData[filename] || "";
         }
 
-        // Проверка состояния авторизации при загрузке страницы
+        // Проверка состояния авторизации и сохранение данных пользователя
         document.addEventListener('DOMContentLoaded', () => {
             const isAuthenticated = localStorage.getItem('isAuthenticated');
             if (isAuthenticated === 'true') {
@@ -136,7 +136,16 @@
         // Обработка отправки формы авторизации
         document.getElementById('authForm').addEventListener('submit', (e) => {
             e.preventDefault();
-            // Разрешаем любые логин и пароль
+            const login = document.getElementById('login').value;
+            const password = document.getElementById('password').value;
+            const gender = document.querySelector('input[name="gender"]:checked').value;
+
+            // Сохранение данных пользователя в localStorage
+            let users = JSON.parse(localStorage.getItem('users')) || [];
+            users.push({ login, password, gender });
+            localStorage.setItem('users', JSON.stringify(users));
+
+            // Установка статуса авторизации
             localStorage.setItem('isAuthenticated', 'true');
             document.getElementById('authContainer').classList.add('hidden');
             document.getElementById('mainContainer').classList.remove('hidden');
