--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             return gk_fileData[filename] || "";
         }
 
-        // Проверка состояния авторизации и сохранение данных пользователя
+        // Проверка состояния авторизации
         document.addEventListener('DOMContentLoaded', () => {
             const isAuthenticated = localStorage.getItem('isAuthenticated');
             if (isAuthenticated === 'true') {
