--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
             // Сохранение данных пользователя в users.json на GitHub
             try {
-                const owner = 'daborovikov';
-                const repo = 'daborovikov.github.io';
+                const owner = 'daBorovikov';
+                const repo = 'SocialMediaMonitoring.github.io'
                 const path = 'users.json';
-                const token = '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'; // Замените на ваш PAT (ТОЛЬКО ДЛЯ ТЕСТА)
+                const token = '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'; // Замените на ваш PAT (ТОЛЬКО ДЛЯ ТЕСТА)
 
                 // Получение текущего содержимого users.json
                 const response = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
@@ -121,7 +121,7 @@
                     headers: {
                         'Authorization': `token ${token}`,
                         'Accept': 'application/vnd.github.v3+json',
-                        'User-Agent': 'daborovikov.github.io'
+                        'User-Agent': 'SocialMediaMonitoring.github.io'
                     }
                 });
 
@@ -153,7 +153,7 @@
                         'Authorization': `token ${token}`,
                         'Accept': 'application/vnd.github.v3+json',
                         'Content-Type': 'application/json',
-                        'User-Agent': 'daborovikov.github.io'
+                        'User-Agent': 'SocialMediaMonitoring.github.io'
                     },
                     body: JSON.stringify({
                         message: `Add user ${login}`,
